--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>404 Page Not Found</title>
     <link rel="shortcut icon" href="imgs/devchallenges.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+
+    <!-- Media Queries -->
+
+    <link rel="stylesheet" href="media_queries.css">
+
 </head>
 <body>
     <main>
@@ -34,9 +39,7 @@
         <footer>
             <h3>created by <span>murilopita</span> - devChallenges.io</h3>
         </footer>
-    </main>
 
-
-    
+    </main>    
 </body>
 </html>
